DOCS : ERD 목차 수정

--- a/docs/0.architecture/03.ERD.md
+++ b/docs/0.architecture/03.ERD.md
@@ -17,17 +17,18 @@
   * [의도 (Intent)](#의도-intent)
     * [테이블의 고유 식별자 구성](#테이블의-고유-식별자-구성)
     * [동시성 제어 컬럼](#동시성-제어-컬럼)
+    * [Redis 사용지점](#redis-사용지점)
     * [관리자 성격의 상태 컬럼](#관리자-성격의-상태-컬럼)
   * [ERD 작성](#erd-작성)
   * [상태 및 타입 정의 (Status & Type)](#상태-및-타입-정의-status--type)
-    * [거래 타입 (transaction_type)](#거래-타입-transaction_type)
-    * [쿠폰 상태 (coupon_status)](#쿠폰-상태-coupon_status)
-    * [사용 상태 (used_status)](#사용-상태-used_status)
-    * [판매 상태 (sell_status)](#판매-상태-sell_status)
-    * [랭크 타입 (rank_type)](#랭크-타입-rank_type)
-    * [주문 상태 (order_status)](#주문-상태-order_status)
-    * [결제 상태 (payment_status)](#결제-상태-payment_status)
-    * [결제 수단 (payment_method)](#결제-수단-payment_method)
+    * [거래 타입 (transaction_type)](#1-거래-타입-transactiontype)
+    * [상품 상태 (product_status)](#2-상품-상태-productstatus)
+    * [쿠폰 상태 (coupon_status)](#3-쿠폰-상태-couponstatus)
+    * [사용자쿠폰 상태 (User_Coupon_Status)](#4-사용자쿠폰-상태-usercouponstatus)
+    * [주문 상태 (Order_Status)](#5-주문-상태-orderstatus)
+    * [결제 수단 (Payment_Method)](#6-결제-수단-paymentmethod)
+    * [결제 상태 (Payment_Status)](#7-결제-상태-paymentstatus)
+    * [기타 참고](#8-기타-참고)
 <!-- TOC -->
 
 ## 생각&고민
